scheletro menu navigabile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-list></app-list>
+<div class="menu">
+    <ul>
+        <li><a routerLink="/homepage" routerLinkActive="active">Homepage</a></li>
+        <li><a routerLink="/list" routerLinkActive="active">List</a></li>
+        <li><a routerLink="/feedback" routerLinkActive="active">Feedback</a></li>
+    </ul>
+
+
+</div>
+
+
 <router-outlet></router-outlet>
