--- a/src/app/components/homepage/homepage.component.sass
+++ b/src/app/components/homepage/homepage.component.sass
@@ -1,19 +1,15 @@
-
-
-
-
-    
-    
-.container 
+.container
     float: left
-    
 
 .footer 
     position: fixed
     left: 0
     bottom: 0
     width: 100%
-    color: black
+
+.footer li
+    display: inline
+    
     
 .fling-minislide 
     width: 700px
@@ -21,6 +17,7 @@
     overflow: hidden
     position: relative
     float: right
+    
     
 .fling-minislide img 
     animation: fling-minislide 15s infinite
@@ -45,7 +42,7 @@
 .fling-minislide img:nth-child(1) 
     animation-delay: 0s
     
-        
+
     
     
 
