--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -2,21 +2,23 @@
     <ul>
         <ng-container *ngFor="let item of list">
             <li>
-                <div class="container">
-                    <div class="logoContainer">
-                        <img src={{item.image}} class="logo">
+                <a routerLink='/detail'>
+                    <div class="container">
+                        <div class="logoContainer">
+                            <img src={{item.image}} class="logo">
+                        </div>
+                        <div class="listItem">
+                            <p class="title">{{item.title}}</p>
+                            <p>{{item.description}}</p>
+                        </div>
+                        <div class="icons">
+                            <i class="material-icons">favorite_border</i>
+                            <i class="material-icons">favorite</i>
+                            <i class="material-icons">share</i>
+                            <i class="material-icons">more_vert</i>
+                        </div>
                     </div>
-                    <div class="listItem">
-                        <p class="title">{{item.title}}</p>
-                        <p>{{item.description}}</p>
-                    </div>
-                    <div class="icons">
-                        <i class="material-icons">favorite_border</i>
-                        <i class="material-icons">favorite</i>
-                        <i class="material-icons">share</i>
-                        <i class="material-icons">more_vert</i>
-                    </div>
-                </div>
+                </a>
             </li>
         </ng-container>
     </ul>
