--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+
 <div class= "formcontainer">
   <div class="formdimensions">
     <form action="/action_page.php">
@@ -6,6 +7,7 @@
   </div>
 
   <div class="container">
+      <button type="button"  onclick="">+</button>
     <label for="uname"><b>Nome Utente</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
 
@@ -13,14 +15,13 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
         
     <button type="submit">Accedi</button>
-    <label class="switch">
-    <input type="checkbox">
-    <span class="slider round"></span><div class="label-text">Memorizza Password</div>
-  </label>
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-    <span class="psw">Forgot <a href="#">password?</a></span>
+    <p></p>
+    <div class="switch">
+        <label class="switch">
+            <input type="checkbox" checked>
+            <span class="slider round"></span>Memorizza Password
+          </label>
+      </div>
   </div>
 </form>
 </div>
