--- a/src/app/components/login/login.component.sass
+++ b/src/app/components/login/login.component.sass
@@ -1,123 +1,129 @@
-.formdimensions
-    weight: 200px
-
 .formcontainer
-    text-align: center
-    
+  position: fixed
+  bottom: center
+  right: center
+
+  
+
+.formdimensions
+    width: 400px  
+    height: 500px  
+
+
 input[type=text], input[type=password]  
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+  width: 100%  
+  padding: 12px 20px  
+  margin: 8px 0  
+  display: inline-block  
+  border: 1px solid #ccc  
+  box-sizing: border-box  
  
 
 button  
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
+  background-color: #4CAF50  
+  color: white  
+  padding: 14px 20px  
+  margin: 8px 0  
+  border: none  
+  cursor: pointer  
+  width: 100%  
  
 
 button:hover  
-  opacity: 0.8;
+  opacity: 0.8  
  
 
 .cancelbtn  
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
+  width: auto  
+  padding: 10px 18px  
+  background-color: #f44336  
  
 
 .imgcontainer  
-  text-align: center;
-  margin: 24px 0 12px 0;
+  text-align: center  
+  margin: 24px 0 12px 0  
  
 
 img.avatar  
-  width: 40%;
-  border-radius: 50%;
+  width: 40%  
+  border-radius: 50%  
  
 
 .container  
-  padding: 16px;
+  padding: 16px  
  
 
 span.psw  
-  float: right;
-  padding-top: 16px;
+  float: right  
+  padding-top: 16px  
  
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px)  
   span.psw  
-     display: block;
-     float: none;
+     display: block  
+     float: none  
    
   .cancelbtn  
-     width: 100%;
+     width: 100%  
    
  
-.switch  
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 10px;
- 
+.switch   
+  position: relative  
+  display: inline-block  
+  width: 30px  
+  height: 10px  
+  
 
-.switch input   
-  opacity: 0;
-  width: 0;
-  height: 0;
- 
+.switch input    
+  opacity: 0  
+  width: 0  
+  height: 0  
+  
 
-.slider  
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
- 
+.slider   
+  position: absolute  
+  cursor: pointer  
+  top: 0  
+  left: 0  
+  right: 0  
+  bottom: 0  
+  background-color: #ccc  
+  -webkit-transition: .4s  
+  transition: .4s  
+  
 
-.slider:before  
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
- 
+.slider:before   
+  position: absolute  
+  content: ""  
+  height: 10px  
+  width: 10px  
+  left: 0px  
+  bottom: 0px  
+  background-color: white  
+  -webkit-transition: .4s  
+  transition: .4s  
+  
 
-input:checked + .slider  
-  background-color: #2196F3;
- 
+input:checked + .slider   
+  background-color: #2196F3  
+  
 
-input:focus + .slider  
-  box-shadow: 0 0 1px #2196F3;
- 
+input:focus + .slider   
+  box-shadow: 0 0 1px #2196F3  
+  
 
-input:checked + .slider:before  
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
- 
+input:checked + .slider:before   
+  -webkit-transform: translateX(10px)  
+  -ms-transform: translateX(10px)  
+  transform: translateX(20px)  
+  
 
 /* Rounded sliders */
-.slider.round  
-  border-radius: 34px;
- 
+.slider.round   
+  border-radius: 10px  
+  
 
-.slider.round:before  
-  border-radius: 50%;
- 
+.slider.round:before   
+  border-radius: 50%  
+  
