--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,3 +1,22 @@
-<p>
-  register works!
-</p>
+<div class= "formcontainer">
+    <div class="formdimensions">
+      <form action="/action_page.php">
+    <div class="imgcontainer">
+      <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
+    </div>
+  
+    <div class="container">
+        <button type="button" onclick="">x</button>
+      <label for="uname"><b>Email</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+  
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+          
+      <button type="submit">Registrati</button>
+    </div>
+  
+    
+  </form>
+  </div>
+  </div>
