--- a/src/app/components/feedback/feedback.component.sass
+++ b/src/app/components/feedback/feedback.component.sass
@@ -2,8 +2,8 @@ div.container
     text-align: center
     display: grid
     display: -ms-grid
-    grid-template-columns: auto 400px auto
-    -ms-grid-columns: auto 400px auto
+    grid-template-columns: 33% 34% 33%
+    -ms-grid-columns: 33% 34% 33%
 
 div.central-column
     grid-column: 2 
@@ -31,7 +31,7 @@ div.input-container
     width: 360px
 
 label
-    width: 360px
+    width: 100%
     padding: 0px
     margin: 0px
 
@@ -40,20 +40,20 @@ input
     padding: 0px
     margin: 0px
     background: lightblue
-    width: 360px
+    width: 100%
 
 select
     border: none
     padding: 0px
     margin: 0px
     background: lightblue
-    width: 360px
+    width: 00%
 
 textarea
     border: none
     padding: 0px
     margin: 0px
     background: lightblue
-    width: 360px
+    width: 100%
     height: 100px
     font-weight: bold
