--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,27 +1,31 @@
-<div class= "formcontainer">
-  <div class="formdimensions">
-    <form action="/action_page.php">
-  <div class="imgcontainer">
-    <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
-  </div>
+<div class="container">
+    <div class="central-column">
+        <div class="formcontainer">
+            <div class="formdimensions">
+                <form action="/action_page.php">
+                    <div class="imgcontainer">
+                        <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
+                    </div>
 
-  <div class="container">
-    <label for="uname"><b>Nome Utente</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+                    <div class="container">
+                        <label for="uname"><b>Nome Utente</b></label>
+                        <input type="text" placeholder="Enter Username" name="uname" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-        
-    <button type="submit">Accedi</button>
-    <label class="switch">
+                        <label for="psw"><b>Password</b></label>
+                        <input type="password" placeholder="Enter Password" name="psw" required>
+
+                        <button type="submit">Accedi</button>
+                        <label class="switch">
     <input type="checkbox">
     <span class="slider round"></span><div class="label-text">Memorizza Password</div>
   </label>
-  </div>
+                    </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
-</form>
-</div>
+                    <div class="container" style="background-color:#f1f1f1">
+                        <span class="psw">Forgot <a href="#">password?</a></span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
