allignment of login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,14 +8,21 @@
                     </div>
 
                     <div class="container">
-                        <label for="uname"><b>Nome Utente</b></label>
-                        <input type="text" placeholder="Enter Username" name="uname" required>
+                        <div>
+                          <label for="uname"><b>Nome Utente</b></label>
+                          <input type="text" placeholder="Enter Username" name="uname" required>
+                        </div>
 
-                        <label for="psw"><b>Password</b></label>
-                        <input type="password" placeholder="Enter Password" name="psw" required>
+                        <div>
+                          <label for="psw"><b>Password</b></label>
+                          <input type="password" placeholder="Enter Password" name="psw" required>
+                        </div>
 
-                        <button type="submit">Accedi</button>
-                        <label class="switch">
+                        <div>
+                          <button type="submit">Accedi</button>
+                        </div>
+
+  <label class="switch">
     <input type="checkbox">
     <span class="slider round"></span><div class="label-text">Memorizza Password</div>
   </label>
