--- a/src/app/components/feedback/feedback.component.sass
+++ b/src/app/components/feedback/feedback.component.sass
@@ -6,13 +6,14 @@ div.container
     -ms-grid-columns: 33% 34% 33%
 
 div.central-column
-    grid-column: 2 
+    grid-column: 2
     -ms-grid-column: 2
 
 i
     font-size: 35px
 
 div.form-item
+    padding-left: 5px
     border-bottom: 1px solid white
     background: lightblue
 
@@ -23,31 +24,42 @@ div.icon-container
 
 div.input-container
     padding-left: 5px
+    font-weight: bold 
     text-align: left
     position: relative
     padding: 0px
     margin: 0px
     left: 36px
-    width: 360px
+    width: 90%
+
+#comments-label
+    position: absolute
+    position: left
+    text-align: left
 
 label
-    width: 100%
+    font-weight: lighter
+    font-size: 10px
+    text-alignt: left
     padding: 0px
-    margin: 0px
+    margin: auto
+    margin-left: 0px
 
 input
+ 
     border: none
     padding: 0px
     margin: 0px
     background: lightblue
     width: 100%
+    font-weight: bold
 
 select
     border: none
     padding: 0px
     margin: 0px
     background: lightblue
-    width: 00%
+    width: 100%
 
 textarea
     border: none
