--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -11,8 +11,8 @@
                         <p>{{item.description}}</p>
                     </div>
                     <div class="icons">
-                        <i class="material-icons">favorite_border</i>
-                        <i class="material-icons">favorite</i>
+                        <i class="material-icons" (click)="setFavorite()">favorite_border</i>
+                        <i class="material-icons" id="favorite" (click)="setNotFavorite()">favorite</i>
                         <i class="material-icons">share</i>
                         <i class="material-icons">more_vert</i>
                     </div>
