--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<app-list>
-
-
-</app-list>
-<app-feedback></app-feedback>
 <app-login></app-login>
-<app-register></app-register>
+<app-navbar></app-navbar>
+
+
+
 <router-outlet></router-outlet>
