--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-list></app-list>
+<app-detail></app-detail>
 <app-feedback></app-feedback>
 <app-login></app-login>
 <app-register></app-register>
