--- a/src/app/components/feedback/feedback.component.sass
+++ b/src/app/components/feedback/feedback.component.sass
@@ -69,3 +69,10 @@ textarea
     width: 100%
     height: 100px
     font-weight: bold
+    
+button 
+    margin-top: 20px
+    width: 100%
+    border-radius: 20px
+    border: none
+    height: 40px
