--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -11,8 +11,15 @@
                         <p>{{item.description}}</p>
                     </div>
                     <div class="icons">
-                        <i class="material-icons" (click)="setFavorite()">favorite_border</i>
-                        <i class="material-icons" id="favorite" (click)="setNotFavorite()">favorite</i>
+                        <i class="material-icons" (click)="toggleFavorite(item.id)">
+                            <ng-container *ngIf="!item.favorite; else other_content">
+                                favorite_border
+                            </ng-container>
+                            <ng-template #other_content>
+                                favorite
+                            </ng-template>
+                        </i>
+
                         <i class="material-icons">share</i>
                         <i class="material-icons">more_vert</i>
                     </div>
