routing and navbar

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
                         <label for="psw"><b>Password</b></label>
                         <input type="password" placeholder="Enter Password" name="psw" required>
 
-                        <button type="submit">Accedi</button>
+                        <button type="submit" (click)="doLogin()">Accedi</button>
                         <label class="switch">
     <input type="checkbox">
     <span class="slider round"></span><div class="label-text">Memorizza Password</div>
