--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,14 @@
-<nav>
-    <ul class="nav">
-        <li>
-            <a routerLink="/homepage" routerLinkActive="active">Homepage</a>
-        </li>
-        <li>
-            <a routerLink="/list" routerLinkActive="active">List</a>
-        </li>
-        <li>
-            <a routerLink="/feedback" routerLinkActive="active">Feedback</a>
-        </li>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<div>
+    <ul>
+        <ng-container *ngFor="let item of listItm">
+            <li>
+                <a [routerLink]="item.path" routerLinkActive="router-link-active">{{item.title}}</a>
+
+            </li>
+        </ng-container>
+
     </ul>
-</nav>
+</div>
