--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+#grad {
+    background-image: linear-gradient(to right, blue, white);
+}
