--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,12 +2,19 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div>
+    <div class="searchBar" *ngIf="routeIsActive('/list')">
+        <input type="text" placeholder="search">
+    </div>
     <ul>
         <ng-container *ngFor="let item of listItm">
-            <li>
-                <a [routerLink]="item.path" routerLinkActive="router-link-active">{{item.title}}</a>
 
+
+            <li>
+
+
+                <a [routerLink]="item.path" routerLinkActive="router-link-active">{{item.title}}</a>
             </li>
+
         </ng-container>
 
     </ul>
