--- a/src/app/components/register/register.component.sass
+++ b/src/app/components/register/register.component.sass
@@ -1,7 +1,9 @@
+.btn-container
+  margin-left: 200px
 .btn
-  position: relative
+
+  background-color: red
   text-align: center
-  float: right
   height: 50px 
   width: 50px
   pbackground-color: #4CAF50
@@ -11,8 +13,9 @@
   text-decoration: none
   display: inline-block
   font-size: 16px
-  margin: 4px 2px
+  margin: 4px 2px 
   cursor: pointer
+  border-radius: 100%
   
 .imgcontainer 
   text-align: center
