--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
     <div class="imgcontainer">
           <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
     </div>
-    <div>
+      <div class="btn-container">
       <button type="button" class="btn">+</button>
     </div>
     <div class="inputrow">
