--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,11 +3,11 @@
 <div class="signin cf">
   <form>
     <div class="imgcontainer">
-          <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
+      <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
     </div>
-    <div>
+      <div class="btn-container">
       <button type="button" class="btn">x</button>
-    </div>
+    </div>  
     <div class="inputrow">
       <input type="text" id="name" placeholder="Email"/>
       <label class="ion-person" for="name"></label>
