--- a/src/app/components/register/register.component.sass
+++ b/src/app/components/register/register.component.sass
@@ -1,124 +1,180 @@
-.formcontainer
-    align: center
-    .formdimensions
-    width: 400px  
-    height: 500px  
+.btn
+  text-align: center
+  height: 50px 
+  width: 50px
+  background-color: red
+  border: none
+  color: white
+  text-align: center
+  text-decoration: none
+  display: inline-block
+  font-size: 16px
+  margin: 4px 2px
+  cursor: pointer
+  border-radius: 100%
+  margin-left: 200px
+  
+.imgcontainer 
+  text-align: center
+  margin: 24px 0 12px 0
 
-
-input[type=text], input[type=password]  
-  width: 100%  
-  padding: 12px 20px  
-  margin: 8px 0  
-  display: inline-block  
-  border: 1px solid #ccc  
-  box-sizing: border-box  
+  
+.signin  
+  display: block 
+  position: relative 
+  width: 250px 
+  margin: 20px auto 
+  padding: 20px 
+  background-color: rgba(0,0,0,0.1) 
+  -webkit-border-radius: 5px 
+  -moz-border-radius: 5px 
+  border-radius: 5px 
+  -webkit-box-shadow: inset 1px 1px 0 0 rgba(255,255,255,0.2), inset -1px -1px 0 0 rgba(0,0,0,0.2) 
+  -moz-box-shadow: inset 1px 1px 0 0 rgba(255,255,255,0.2), inset -1px -1px 0 0 rgba(0,0,0,0.2) 
+  box-shadow: inset 1px 1px 0 0 rgba(255,255,255,0.2), inset -1px -1px 0 0 rgba(0,0,0,0.2) 
  
-
-button  
-  background-color: #4CAF50  
-  color: white  
-  padding: 14px 20px  
-  margin: 8px 0  
-  border: none  
-  cursor: pointer  
-  width: 100%  
+.signin .avatar  
+  width: 100px 
+  height: 100px 
+  margin: 0 auto 35px auto 
+  border: 0px solid #fff 
+  -webkit-border-radius: none
+  -moz-border-radius: none 
+  border-radius: none 
+  -webkit-pointer-events: none 
+  -moz-pointer-events: none 
+  pointer-events: none 
  
-
-button:hover  
+.signin .avatar:before  
+  content: "\f272" 
+  text-align: center 
+  font-family: Ionicons 
+  display: block 
+  height: 100% 
+  line-height: 100px 
+  font-size: 5em 
+ 
+.signin .inputrow  
+  position: relative 
+ 
+.signin .inputrow label  
+  position: absolute 
+  top: 12px 
+  left: 10px 
+ 
+.signin .inputrow label:before  
+  color: #538a9a 
+  opacity: 0.4 
+  -webkit-transition: opacity 300ms 0 ease 
+  -moz-transition: opacity 300ms 0 ease 
+  transition: opacity 300ms 0 ease 
+ 
+.signin input[type="text"],
+.signin input[type="password"]  
+  padding: 10px 12px 10px 32px 
+  display: block 
+  width: 100% 
+  margin-bottom: 10px 
+  border: 1px solid rgba(255,255,255,0.5) 
+  background-color: #fff 
+  color: #333 
+  font-size: 1em 
+  font-weight: 300 
+  outline: none 
+  -webkit-border-radius: 5px 
+  -moz-border-radius: 5px 
+  border-radius: 5px 
+  -webkit-transition: border-color 300ms 0 ease 
+  -moz-transition: border-color 300ms 0 ease 
+  transition: border-color 300ms 0 ease 
+  -webkit-box-sizing: border-box 
+  -moz-box-sizing: border-box 
+  box-sizing: border-box 
+ 
+.signin input[type="text"]:focus + label:before,
+.signin input[type="password"]:focus + label:before  
+  opacity: 1 
+ 
+.signin input[type="submit"]  
+  -webkit-appearance: none 
+  text-align: center
+  height: 50px 
+  width: 100%
+  padding: 10px 12px 
+  margin-bottom: 10px 
+  background-color: #538a9a  
+  color: #fff 
+  border: 0px  
+  margin: 5px 
+  outline: none 
+  -webkit-border-radius: 5px 
+  -moz-border-radius: 5px 
+  border-radius: 30px 
+ 
+.signin input[type="submit"]:hover  
+  background-color: #5e98a8 
+ 
+.signin input[type="submit"]:active  
+  background-color: #4a7b89 
+ 
+input[type="checkbox"]  
+  display: none 
+ 
+input[type="checkbox"] + label  
+  position: relative 
+  padding-left: 36px 
+  font-size: 0.6em 
+  font-weight: normal 
+  line-height: 16px 
   opacity: 0.8  
+  -webkit-user-select: none 
+  -moz-user-select: none 
+  user-select: none 
  
-
-.cancelbtn  
-  width: auto  
-  padding: 10px 18px  
-  background-color: #f44336  
+input[type="checkbox"] + label:before,
+input[type="checkbox"] + label:after  
+  content: "" 
+  position: absolute 
+  display: block 
+  height: 16px 
+  -webkit-border-radius: 30px 
+  -moz-border-radius: 30px 
+  border-radius: 30px 
  
-
-.imgcontainer  
-  text-align: center  
-  margin: 24px 0 12px 0  
+input[type="checkbox"] + label:before  
+  left: 0 
+  top: -2px 
+  width: 30px 
+  background: rgba(0,0,0,0.3) 
+  -webkit-box-shadow: inset 1px 1px 1px 1px rgba(0,0,0,0.3) 
+  -moz-box-shadow: inset 1px 1px 1px 1px rgba(0,0,0,0.3) 
+  box-shadow: inset 1px 1px 1px 1px rgba(0,0,0,0.3) 
  
-
-img.avatar  
-  width: 40%  
-  border-radius: 50%  
+input[type="checkbox"] + label:after  
+  opacity: 0.3 
+  background: #fff 
+  top: 0px 
+  left: 2px 
+  height: 12px 
+  width: 12px 
+  -webkit-transition: all 200ms 0 ease 
+  -moz-transition: all 200ms 0 ease 
+  transition: all 200ms 0 ease 
  
-
-.container  
-  padding: 16px  
+input[type="checkbox"]:checked + label  
+  opacity: 1 
  
-
-span.psw  
-  float: right  
-  padding-top: 16px  
+input[type="checkbox"]:checked + label:after  
+  opacity: 1 
+  left: 16px 
  
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px)  
-  span.psw  
-     display: block  
-     float: none  
-   
-  .cancelbtn  
-     width: 100%  
-   
+.cf:before,
+.cf:after  
+  content: " " 
+  display: table 
  
-.switch  
-  position: relative  
-  display: inline-block  
-  width: 30px  
-  height: 10px  
+.cf:after  
+  clear: both 
  
-
-.switch input   
-  opacity: 0  
-  width: 0  
-  height: 0  
- 
-
-.slider  
-  position: absolute  
-  cursor: pointer  
-  top: 0  
-  left: 0  
-  right: 0  
-  bottom: 0  
-  background-color: #ccc  
-  -webkit-transition: .4s  
-  transition: .4s  
- 
-
-.slider:before  
-  position: absolute  
-  content: ""  
-  height: 26px  
-  width: 26px  
-  left: 4px  
-  bottom: 4px  
-  background-color: white  
-  -webkit-transition: .4s  
-  transition: .4s  
- 
-
-input:checked + .slider  
-  background-color: #2196F3  
- 
-
-input:focus + .slider  
-  box-shadow: 0 0 1px #2196F3  
- 
-
-input:checked + .slider:before  
-  -webkit-transform: translateX(26px)  
-  -ms-transform: translateX(26px)  
-  transform: translateX(26px)  
- 
-
-/* Rounded sliders */
-.slider.round  
-  border-radius: 34px  
- 
-
-.slider.round:before  
-  border-radius: 50%  
- 
+.cf  
+  *zoom: 1 
