--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -4,17 +4,14 @@
             <h1>{{item.title}}</h1>
             <h4>{{item.description}}</h4>
         </div>
-        <div class="carousel-wrapper">
-            <ul>
-                <ng-container *ngFor="let item of residualList">
-                    <ng-container *ngIf="firstTime || item.id == visibleId">
-                        <li><img src="{{item.image}}" class="carousel-image"> {{item.title}}</li>
-                    </ng-container>
-                </ng-container>
-            </ul>
-            <ng-container *ngFor="let item of residualList">
-                <button class="carousel-button" (click)="showCarousel(item.id)"></button>
-            </ng-container>
+        <div>
+            <div class="carousel-container">
+                <ng-image-slider [images]="imageObject" #nav></ng-image-slider>
+            </div>
+            <div class="carousel-text">
+                <h5>Scopri tutta la gamma dei nostri prodotti:</h5>
+                <p>Non fermarti alla prima lega. I nostri servizi ti accompagnano fino alla realizzazione di tutti i tuoi sogni</p>
+            </div>
         </div>
     </div>
     <div class="central-column">
