--- a/src/app/components/detail/detail.component.sass
+++ b/src/app/components/detail/detail.component.sass
@@ -19,10 +19,6 @@ div.right-column
     grid-column: 3
     -ms-grid-column: 3
 
-.carousel-wrapper 
-    text-align: left
-    overflow: hidden
-
 ul
     list-style-type: none
 
@@ -59,14 +55,18 @@ button
     border: none
     height: 40px
 
-button.carousel-button
+div.carousel-container
+    float: left
+    background: black
+    width: 39%
+    height: 220px
+
+div.carousel-text
+    text-align: left
+    border: 1px solid green
     float: right
-    margin: 8px
-    height: 20px
-    width: 8px
-    border-radius: 8px
-    border: 3px solid black
-    cursor: pointer
+    width: 60%
+    height: 220px
 
 img
     margin: auto
