--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,6 +20,6 @@
         <input type="checkbox" name="remember" id="remember" />
         <label class="radio" for="remember">Memorizza Password</label>
         <div>
-            <input type="submit" value="Accedi" />
-        
-</div>
+            <input type="submit" value="Accedi" routerLink='/homepage' />
+
+        </div>
