--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -12,18 +12,29 @@
                 <h5>Scopri tutta la gamma dei nostri prodotti:</h5>
                 <p>Non fermarti alla prima lega. I nostri servizi ti accompagnano fino alla realizzazione di tutti i tuoi sogni</p>
             </div>
+            <div class="carousel-wrapper">
+                <ul>
+                    <ng-container *ngFor="let item of residualList">
+                        <ng-container *ngIf="firstTime || item.id == visibleId">
+                            <li><img src="{{item.image}}" class="carousel-image"> {{item.title}}</li>
+                        </ng-container>
+                    </ng-container>
+                </ul>
+                <ng-container *ngFor="let item of residualList">
+                    <button class="carousel-button" (click)="showCarousel(item.id)"></button>
+                </ng-container>
+            </div>
         </div>
-    </div>
-    <div class="central-column">
-        <img src="https://hdqwalls.com/download/kda-akali-lol-art-v9-1440x2960.jpg">
-    </div>
-    <div class="right-column">
-        <div class="placeholder"> </div>
-        <div class="left-align">
-            <h3 class="price">€ {{item.price}}</h3>
-            <p class="payment-disclaimer">Assicuriamo a tutti i nostri utenti la sicurezza dei pagamenti, garantita attraverso la collaborazione con l'istituto di credito XYZ e il servizio PayPal</p>
+        <div class="central-column">
+            <img src="https://hdqwalls.com/download/kda-akali-lol-art-v9-1440x2960.jpg">
         </div>
-        <button>Comprami, sono in vendita</button>
-    </div>
+        <div class="right-column">
+            <div class="placeholder"> </div>
+            <div class="left-align">
+                <h3 class="price">€ {{item.price}}</h3>
+                <p class="payment-disclaimer">Assicuriamo a tutti i nostri utenti la sicurezza dei pagamenti, garantita attraverso la collaborazione con l'istituto di credito XYZ e il servizio PayPal</p>
+            </div>
+            <button>Comprami, sono in vendita</button>
+        </div>
 
-</div>
+    </div>
