--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -8,8 +8,7 @@
             <ul>
                 <ng-container *ngFor="let item of residualList">
                     <ng-container *ngIf="firstTime || item.id == visibleId">
-                        <li><img src="{{item.image}}" class="carousel-image"> Title works
-                        </li>
+                        <li><img src="{{item.image}}" class="carousel-image"> {{item.title}}</li>
                     </ng-container>
                 </ng-container>
             </ul>
