--- a/src/app/components/detail/detail.component.sass
+++ b/src/app/components/detail/detail.component.sass
@@ -11,6 +11,7 @@ div.left-column
     -ms-grid-column: 1
 
 div.central-column
+    margin: auto
     grid-column: 2
     -ms-grid-column: 2
 
@@ -27,11 +28,6 @@ div.placeholder
     width: auto    
 div.left-align
     text-align: left
-
-img.carousel-image
-    background: black
-    height: 100px
-    width: auto
 
 h1
     font-size: 60px
