--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<div>
+<div style="overflow: auto">
     <div class="searchBar" *ngIf="routeIsActive('/list')">
-        <input type="text" placeholder="search">
+        <input type="search" placeholder="Cerca" [(ngModel)]="searchText">
+        <span><i (click)="search(searchText)" class="material-icons">search</i></span>
     </div>
     <ul>
         <ng-container *ngFor="let item of listItm">
-
-
             <li>
-
-
                 <a [routerLink]="item.path" routerLinkActive="router-link-active">{{item.title}}</a>
             </li>
 
