--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -1,6 +1,14 @@
 li
     display: inline
     padding: 5px
+    
 
 .searchBar
     float: right
+    padding-top: 5px
+    border: 1px solid blue
+
+span
+    border: 1px solid green
+    margin-top: 10px
+    font-size: 5px
