--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="left-column">
-        <div class="left-align">
+        <div class="left-align" *ngIf="item">
             <h1>{{item.title}}</h1>
             <h4>{{item.description}}</h4>
         </div>
@@ -20,7 +20,7 @@
     <div class="right-column">
         <div class="placeholder"> </div>
         <div class="left-align">
-            <h3 class="price">€ {{item.price}}</h3>
+            <h3 class="price">€ {{item?.price}}</h3>
             <p class="payment-disclaimer">Assicuriamo a tutti i nostri utenti la sicurezza dei pagamenti, garantita attraverso la collaborazione con l'istituto di credito XYZ e il servizio PayPal</p>
         </div>
         <button>Comprami, sono in vendita</button>
