--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
             <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
         </div>
         <div>
-            <button type="button" class="btn">+</button>
+            <button type="button" routerLink="/register" class="btn">+</button>
         </div>
         <div class="inputrow">
             <input type="text" id="name" placeholder="Nome Utente" />
