--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -7,7 +7,7 @@
             <img src="https://gamepedia.cursecdn.com/lolesports_gamepedia_en/5/58/Good_Game_Universitylogo_square.png?version=fc22e0041562d9245cf110e9dc93c6cb" alt="Avatar" class="avatar">
         </div>
         <div>
-            <button type="button" class="btn">x</button>
+            <button type="button" class="btn" (click)="goBack()">x</button>
         </div>
         <div class="inputrow">
             <input type="text" id="name" placeholder="Email" />
@@ -16,7 +16,7 @@
         <div class="inputrow">
             <input type="password" id="pass" placeholder="Password" />
             <label class="ion-locked" for="pass"></label>
-        <div>
-            <input type="submit" value="Registrati" />
-        
-</div>
+            <div>
+                <input type="submit" value="Registrati" />
+
+            </div>
