--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Ciao {{nome}}</h3>
+    <h3>Ciao {{user.name}}</h3>
     <h1>Seseifortesali.it</h1>
     <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
     <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
