improve profilo components

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,24 +1,25 @@
-<div>
-  <h1 style="text-align:center">Benvenuto</h1>
-  <div class="imgcontainer">
-      <img src="https://www.nanopress.it/wp-content/uploads/2018/02/Immagini-profilo-Facebook.jpg" alt="Avatar" class="avatar">
-  </div>
-  <div class="container">
-  <div class="row">
-      <div class="columnright">
-          <h2>Nome</h2>
-          <h2>Cognome</h2>
-          <h2>Gender</h2>
-          <h2>Email</h2>
-          <h2>Telefono</h2>
-      </div>
-      <div class="columnleft">
-          <h2>Luca</h2>
-          <h2>Alicata</h2>
-          <h2>Column 2</h2>
-          <h2>Column 2</h2>
-          <h2>Column 2</h2>
-      </div>
+<div class="container">
+    <h1 style="text-align:center">Benvenuto</h1>
+    <label style="text-align:center"><h3>Luca Alicata</h3></label>
+    <div class="imgcontainer">
+        <img src="https://www.nanopress.it/wp-content/uploads/2018/02/Immagini-profilo-Facebook.jpg" alt="Avatar" class="avatar">
     </div>
-  </div>
+  <div class="container">
+      <div class="row">
+       <div class="columnright">
+          <h5>Nome</h5>
+          <h5>Cognome</h5>
+          <h5>Gender</h5>
+          <h5>Email</h5>
+          <h5>Telefono</h5>
+        </div>
+        <div class="columnleft">
+          <h5><b>Luca</b></h5>
+          <h5><b>Alicata</b></h5>
+          <h5><b>Maschio</b></h5>
+          <h5><b>Column 2</b></h5>
+          <h5><b>Column 2</b></h5>
+        </div>
+      </div>
+   </div>
 </div>
