--- a/src/app/components/profile/profile.component.sass
+++ b/src/app/components/profile/profile.component.sass
@@ -3,8 +3,7 @@
   display: block 
   position: relative 
   width: 400px 
-  margin: 20px auto 
-  padding: 20px  
+  margin: 0px auto   
   -webkit-border-radius: 5px 
   -moz-border-radius: 5px 
   border-radius: 5px 
@@ -12,25 +11,26 @@
 .imgcontainer 
   text-align: center
   margin: 24px 0 12px 0
+
     
 .avatar  
   width: 100px 
   height: 100px 
   margin: 0 auto 35px auto 
   border: 0px solid #fff
+  border-radius: 100%
 
 .row
     display: flex
 
 .columnleft 
-  border-left: 3px solid green
-  font-weight: bold
+  border-left: 1px solid green
   text-align: left
-  width: 200px
-  padding: 10px
+  width: 300px
+  padding: 20px
 
 .columnright
-  font-weight: lighter
+  border-right: 1px solid green
   text-align: right
-  width: 200px
-  padding: 10px
+  width: 300px
+  padding: 20px
