change color for profilo elements

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h1 style="text-align:center">Benvenuto</h1>
-    <label style="text-align:center"><h3>Luca Alicata</h3></label>
+    <h1 class="label">">Benvenuto</h1>
+    <label class="label"><h3>Luca Alicata</h3></label>
     <div class="imgcontainer">
         <img src="https://www.nanopress.it/wp-content/uploads/2018/02/Immagini-profilo-Facebook.jpg" alt="Avatar" class="avatar">
     </div>
