--- a/src/app/components/profile/profile.component.sass
+++ b/src/app/components/profile/profile.component.sass
@@ -24,13 +24,20 @@
     display: flex
 
 .columnleft 
-  border-left: 1px solid green
+  border-left: 1px solid #fff
   text-align: left
   width: 300px
   padding: 20px
 
 .columnright
-  border-right: 1px solid green
+  border-right: 1px solid #fff
   text-align: right
   width: 300px
   padding: 20px
+
+h5
+  color: #fff
+
+.label
+  text-align: center
+  color: #fff
