--- a/src/app/components/feedback/feedback.component.sass
+++ b/src/app/components/feedback/feedback.component.sass
@@ -15,7 +15,8 @@ i
 div.form-item
     padding-left: 5px
     border-bottom: 1px solid white
-    background: lightblue
+    background-image: linear-gradient(to right, rgba(52, 73, 94, 1), rgba(93, 109, 126, 0.5))
+    margin-bottom: 5px
 
 div.icon-container
     position: absolute
@@ -37,6 +38,9 @@ div.input-container
     position: left
     text-align: left
 
+option
+    background-color: rgba(52, 73, 94, 1)
+
 label
     font-weight: lighter
     font-size: 10px
@@ -46,26 +50,28 @@ label
     margin-left: 0px
 
 input
- 
+    color: white
+    background-color: rgba(0, 0, 0, 0)
     border: none
     padding: 0px
     margin: 0px
-    background: lightblue
     width: 100%
     font-weight: bold
 
 select
+    color: white
     border: none
     padding: 0px
     margin: 0px
-    background: lightblue
+    background-color: rgba(0, 0, 0, 0)
     width: 100%
 
 textarea
+    color: white
     border: none
     padding: 0px
     margin: 0px
-    background: lightblue
+    background-color: rgba(0, 0, 0, 0)
     width: 100%
     height: 100px
     font-weight: bold
