--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -1,7 +1,13 @@
 li
-    display: inline
-    padding: 5px
-    
+    display: inline-block
+    padding: 20px
+
+li:hover 
+    background-color: white
+    color: rgba(33, 47, 60, 1)
+
+a
+    text-decoration: none
 
 .searchBar
     float: right
@@ -12,3 +18,6 @@ span
     border: 1px solid green
     margin-top: 10px
     font-size: 5px
+
+.active
+    border-bottom: 1px solid white
