--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -10,13 +10,23 @@
             <button type="button" class="btn" (click)="goBack()">x</button>
         </div>
         <div class="inputrow">
-            <input type="text" id="name" placeholder="Email" formControlName="name" />
+            <input type="text" id="name" placeholder="Nome Utente" formControlName="name" />
             <label class="ion-person" for="name"></label>
         </div>
         <div class="inputrow">
-            <input type="password" id="pass" placeholder="Password" formControlName="password" />
-            <label class="ion-locked" for="pass"></label>
-            <div>
-                <input type="submit" value="Registrati" />
+            <input type="text" id="signin" placeholder="Cognome " formControlName="surname" />
+        </div>
+        <div class="inputrow">
+            <label class="ion-locked " for="pass"></label>
+        </div>
+        <div class="inputrow">
+            <input type="password " id="signin" placeholder="Password " formControlName="password" />
+        </div>
+        <label class="ion-locked " for="pass "></label>
+        <input type="email " id="signin" placeholder="Email " formControlName="email" />
+        <label class="ion-locked " for="pass "></label>
+        <input type="text " id="signin" placeholder="Phone " formControlName="phone" />
+        <label class="ion-locked " for="pass "></label>
 
-            </div>
+        <button type="submit " value="Registrati ">Registrati </button>
+    </form>
