grafical update and homepage text implementation

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,6 +13,6 @@
                 {{item.title}}
             </li>
         </ng-container>
-        <button (click)="doLogout()">Esci</button>
+        <li (click)="doLogout()">Esci</li>
     </ul>
 </div>
