--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,27 +1,32 @@
 <div class="container">
-    <h3>Ciao {{user.name}}</h3>
-    <h1>Seseifortesali.it</h1>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
-    <p>testo che descrive in modo accattivante quello che facciamo per estorcere soldi dagli altri</p>
+    <div class="left-column">
+        <h3>Ciao {{user.name}}</h3>
+        <h1>Seseifortesali.it</h1>
+        <p>{{homepageText}}</p>
 
+        <div class="icon-container">
+            <i class="material-icons"> panorama_fish_eye </i>
+            <i class="material-icons"> lens </i>
+            <i class="material-icons"> panorama_fish_eye </i>
+            <i class="material-icons"> lens </i>
+            <i class="material-icons"> panorama_fish_eye </i>
+            <i class="material-icons"> lens </i>
+            <i class="material-icons"> panorama_fish_eye </i>
+            <i class="material-icons"> lens </i>
 
-</div>
+        </div>
+    </div>
 
-<div class="fling-minislide">
+    <div class="placeholder">
 
-    <img src="https://www.dualshockers.com/wp-content/uploads/2018/10/LoL-World-Championships-2018.jpg" alt="Failed to load 1" />
-
-    <img src="https://i.imgur.com/Wv1JO74.jpg" alt="Failed to load 2" />
-
-    <img src="https://boosteria.org/img/boosting-offers/lol-boosting-from-platinum1-to-diamond4.jpg" alt="Failed to load 3" />
+    </div>
+    <div class="right-column">
+        <div class="fling-minislide">
+            <img src="https://www.dualshockers.com/wp-content/uploads/2018/10/LoL-World-Championships-2018.jpg" alt="Failed to load 1" />
+            <img src="https://i.imgur.com/Wv1JO74.jpg" alt="Failed to load 2" />
+            <img src="https://boosteria.org/img/boosting-offers/lol-boosting-from-platinum1-to-diamond4.jpg" alt="Failed to load 3" />
+        </div>
+    </div>
 </div>
 
 <div class="footer">
