minor visual upgrades

--- a/src/app/components/login/login.component.sass
+++ b/src/app/components/login/login.component.sass
@@ -1,9 +1,11 @@
 .btn
   text-align: center
-  height: 50px 
-  width: 50px
-  background-color: red
+  height: 70px 
+  width: 70px
+  background-color: rgb(33, 47, 60)
+  font-weight: bold
   border: none
+  font-size: 30px
   color: white
   text-align: center
   text-decoration: none
@@ -12,8 +14,8 @@
   margin: 4px 2px
   cursor: pointer
   border-radius: 100%
-  margin-left: 200px
-  
+  margin-left: 185px
+
 .imgcontainer 
   text-align: center
   margin: 24px 0 12px 0
