--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -22,11 +22,14 @@
         <div class="inputrow">
             <input type="password " id="signin" placeholder="Password " formControlName="password" />
         </div>
-        <label class="ion-locked " for="pass "></label>
-        <input type="email " id="signin" placeholder="Email " formControlName="email" />
-        <label class="ion-locked " for="pass "></label>
-        <input type="text " id="signin" placeholder="Phone " formControlName="phone" />
-        <label class="ion-locked " for="pass "></label>
+        <div class="inputrow">
+        </div>
+        <div class="inputrow">
+            <input type="email " id="signin" placeholder="Email " formControlName="email" />
+        </div>
+        <div class="inputrow">
+            <input type="text " id="signin" placeholder="Phone " formControlName="phone" />
+        </div>
 
-        <button type="submit " value="Registrati ">Registrati </button>
+        <button type="submit" value="Registrati ">Registrati </button>
     </form>
