--- a/src/app/components/register/register.component.sass
+++ b/src/app/components/register/register.component.sass
@@ -1,15 +1,16 @@
 .btn
   text-align: center
-  height: 50px 
-  width: 50px
-  background-color: red
+  height: 70px 
+  width: 70px
+  background-color: rgb(33, 47, 60)
+  font-weight: bold
   border: none
   color: white
   text-align: center
   text-decoration: none
   display: inline-block
   font-size: 16px
-  margin: 4px 2px
+  margin-left: 185px
   cursor: pointer
   border-radius: 100%
   margin-left: 200px
@@ -95,7 +96,7 @@
 .signin input[type="password"]:focus + label:before  
   opacity: 1 
  
-.signin input[type="submit"]  
+input[type="submit"]  
   -webkit-appearance: none 
   text-align: center
   height: 50px 
@@ -111,10 +112,10 @@
   -moz-border-radius: 5px 
   border-radius: 30px 
  
-.signin input[type="submit"]:hover  
+input[type="submit"]:hover  
   background-color: #5e98a8 
  
-.signin input[type="submit"]:active  
+input[type="submit"]:active  
   background-color: #4a7b89 
  
 .cf:before,
