minor login register visual upgrade

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -15,21 +15,20 @@
         </div>
         <div class="inputrow">
             <input type="text" id="signin" placeholder="Cognome " formControlName="surname" />
+            <label class="ion-person" for="name"></label>
         </div>
         <div class="inputrow">
-            <label class="ion-locked " for="pass"></label>
+            <input type="password" id="signin" placeholder="Password " formControlName="password" />
+            <label class="ion-locked" for="pass"></label>
         </div>
         <div class="inputrow">
-            <input type="password " id="signin" placeholder="Password " formControlName="password" />
+            <input type="text" id="signin" placeholder="Email " formControlName="email" />
+            <label class="ion-email" for="pass"></label>
         </div>
         <div class="inputrow">
-        </div>
-        <div class="inputrow">
-            <input type="email " id="signin" placeholder="Email " formControlName="email" />
-        </div>
-        <div class="inputrow">
-            <input type="text " id="signin" placeholder="Phone " formControlName="phone" />
+            <input type="text" id="signin" placeholder="Phone " formControlName="phone" />
+            <label class="ion-iphone" for="pass"></label>
         </div>
 
-        <button type="submit" value="Registrati ">Registrati </button>
+        <button type="submit" value="Registrati" id="registration-button">Registrati</button>
     </form>
