general visual updates

--- a/src/app/components/detail/detail.component.sass
+++ b/src/app/components/detail/detail.component.sass
@@ -6,7 +6,8 @@ div.container
     -ms-grid-columns: 40% 30% 30%
 
 div.left-column
-    padding: 10px
+    margin: 20px
+    padding: 20px
     grid-column: 1
     -ms-grid-column: 1
 
@@ -29,21 +30,24 @@ div.placeholder
 div.left-align
     text-align: left
 
-h1
-    font-size: 60px
-    border: 1px solid green
+h1  
+    font-weight: 900
+    font-size: 80px
 
 h3
     font-size: 30px
-    border: 1px solid green
+    font-weight: 900
 
 h4
-    font-size: 40px
-    border: 1px solid green
+    font-size: 30px
+    font-weight: 700
+
+h5 
+    font-weight: 700
 
 p.payment-disclaimer   
-    font-weight: lighter
-    font-size: 25px
+    font-weight: 100
+    font-size: 20px
 
 button 
     width: 100%
@@ -52,19 +56,21 @@ button
     height: 40px
 
 div.carousel-container
+    margin-top: 30px
     float: left
     background: black
     width: 39%
     height: 220px
 
 div.carousel-text
+    margin-top: 20px
+    padding-left: 5px
     text-align: left
-    border: 1px solid green
     float: right
     width: 60%
     height: 220px
 
 img
     margin: auto
-    width: 75%
+    width: 60%
     height: auto
