--- a/src/app/components/feedback/feedback.component.sass
+++ b/src/app/components/feedback/feedback.component.sass
@@ -66,6 +66,12 @@ select
     background-color: rgba(0, 0, 0, 0)
     width: 100%
 
+#comments
+    text-align: left
+
+#comments-label
+    padding-left: 35px
+
 textarea
     color: white
     border: none
