--- a/src/app/components/homepage/homepage.component.sass
+++ b/src/app/components/homepage/homepage.component.sass
@@ -7,6 +7,8 @@ div.container
     -ms-grid-columns: 50% 50%
 
 div.left-column
+    margin: 20px
+    text-align: left
     grid-column: 1
     -ms-grid-column: 1
 
@@ -15,11 +17,11 @@ div.right-column
     -ms-grid-column: 2
 
 div.placeholder
-    height: 200px
+    height: 40px
 
 div.icon-container
     text-align: left
-    padding-left: 30px
+
 .footer 
     position: fixed
     left: 0
@@ -59,7 +61,20 @@ div.icon-container
     
 .fling-minislide img:nth-child(1) 
     animation-delay: 0s
+
+i
+    cursor: pointer
+
+#salutation
+    margin: 20px
+    padding: 20px   
+
+#home-text
+    font-weight: bold
     
+h1
+    font-size: 50pt
+
 
     
     
