--- a/src/app/components/list/list.component.sass
+++ b/src/app/components/list/list.component.sass
@@ -11,6 +11,10 @@ img.logo
 
 li 
     list-style-type: none
+    background-color: rgb(214, 219, 223)
+    color: black
+    border-radius: 20px
+    margin-bottom: 10px
 
 .container 
     display: grid
@@ -18,7 +22,6 @@ li
     grid-template-columns: 100px auto 100px
     -ms-grid-columns: 100px auto 100px
     padding: 5px
-    border: 1px solid blue
 
 
 p.title
@@ -26,8 +29,8 @@ p.title
     
 
 div.listItem
+
     padding-left: 10px
-    border: 1px solid green
     border-radius: 10px
     padding-bottom: 5px
     margin-bottom: 5px
@@ -38,10 +41,10 @@ div.icons
     display: flex
     justify-content: flex-end
     align-items: center
-    border: 1px solid yellow
     grid-column: 3
     -ms-grid-column: 3
 
 i
     cursor: pointer
+
 
