--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,30 +1,35 @@
+<span id="salutation">Ciao {{user.name}}</span>
 <div class="container">
     <div class="left-column">
-        <h3>Ciao {{user.name}}</h3>
-        <h1>Seseifortesali.it</h1>
-        <p></p>
+        <h1>Seseifortesali</h1>
+        <div id="home-text">
+            <ng-container *ngFor="let item of texts">
+                <ng-container *ngIf="item.show">
+                    <p>{{item.text}}</p>
+                </ng-container>
+            </ng-container>
+        </div>
+
         <div class="icon-container">
-            <i class="material-icons"> panorama_fish_eye </i>
-            <i class="material-icons"> lens </i>
-            <i class="material-icons"> panorama_fish_eye </i>
-            <i class="material-icons"> lens </i>
-            <i class="material-icons"> panorama_fish_eye </i>
-            <i class="material-icons"> lens </i>
-            <i class="material-icons"> panorama_fish_eye </i>
-            <i class="material-icons"> lens </i>
-
+            <ng-container *ngFor="let item of texts; let i = index">
+                <ng-container *ngIf="!item.show; else other_content">
+                    <i class="material-icons" (click)="showText(i)"> panorama_fish_eye </i>
+                </ng-container>
+                <ng-template #other_content>
+                    <i class="material-icons"> lens </i>
+                </ng-template>
+            </ng-container>
         </div>
     </div>
+</div>
 
-    <div class="placeholder">
+<div class="placeholder"> </div>
 
-    </div>
-    <div class="right-column">
-        <div class="fling-minislide">
-            <img src="https://www.dualshockers.com/wp-content/uploads/2018/10/LoL-World-Championships-2018.jpg" alt="Failed to load 1" />
-            <img src="https://i.imgur.com/Wv1JO74.jpg" alt="Failed to load 2" />
-            <img src="https://boosteria.org/img/boosting-offers/lol-boosting-from-platinum1-to-diamond4.jpg" alt="Failed to load 3" />
-        </div>
+<div class="right-column">
+    <div class="fling-minislide">
+        <img src="https://www.dualshockers.com/wp-content/uploads/2018/10/LoL-World-Championships-2018.jpg" alt="Failed to load 1" />
+        <img src="https://i.imgur.com/Wv1JO74.jpg" alt="Failed to load 2" />
+        <img src="https://boosteria.org/img/boosting-offers/lol-boosting-from-platinum1-to-diamond4.jpg" alt="Failed to load 3" />
     </div>
 </div>
 
