--- a/src/app/components/detail/detail.component.sass
+++ b/src/app/components/detail/detail.component.sass
@@ -70,7 +70,16 @@ div.carousel-text
     width: 60%
     height: 220px
 
-img
+#akali
     margin: auto
     width: 60%
     height: auto
+
+.footer
+   position: fixed
+   bottom: 0
+   left: 0
+   width: 100%
+
+li
+    display: inline-block
