--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -20,3 +20,17 @@ span
 
 .active
     border-bottom: 1px solid white
+
+.footer
+  position: absolute
+  bottom: 0
+  width: 100%
+  /* Set the fixed height of the footer here */
+  height: 60px
+  line-height: 60px
+
+  .logo
+      position: absolute
+      right: 0
+      top: 
+      width: 50%
