--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -44,5 +44,14 @@
         <li>
             <img src="https://img.icons8.com/material-outlined/48/000000/instagram-new.png">
         </li>
+        <li>
+            <img src="https://img.icons8.com/ios-glyphs/48/000000/pinterest.png">
+        </li>
+        <li>
+            <img src="https://img.icons8.com/ios-glyphs/48/000000/snapchat.png">
+        </li>
+        <li>
+            <span class="copyright">Copyright 2019 | Kana S.p.a.</span>
+        </li>
     </ul>
 </div>
