--- a/src/app/components/detail/detail.component.sass
+++ b/src/app/components/detail/detail.component.sass
@@ -76,9 +76,7 @@ div.carousel-text
     height: auto
 
 .footer
-   position: fixed
-   bottom: 0
-   left: 0
+   position: absolute
    width: 100%
 
 li
