--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -30,7 +30,7 @@ span
   line-height: 60px
 
   .logo
-      position: absolute
+      position: fixed
       right: 0
       top: 
       width: 50%
