Logo implementation and visual upgrade

--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -25,5 +25,5 @@
             <h3 class="price">€ {{item?.price}}</h3>
             <p class="payment-disclaimer">Assicuriamo a tutti i nostri utenti la sicurezza dei pagamenti, garantita attraverso la collaborazione con l'istituto di credito XYZ e il servizio PayPal</p>
         </div>
-
+        <button>Comprami, sono in vendita</button>
     </div>
