--- a/src/app/components/detail/detail.component.sass
+++ b/src/app/components/detail/detail.component.sass
@@ -52,6 +52,8 @@ p.payment-disclaimer
 button 
     width: 100%
     border-radius: 20px
+    color: rgb(33, 47, 60)
+    background-color: white
     border: none
     height: 40px
 
