--- a/src/app/components/list/list.component.sass
+++ b/src/app/components/list/list.component.sass
@@ -11,10 +11,11 @@ img.logo
 
 li 
     list-style-type: none
-    background-color: rgb(214, 219, 223)
-    color: black
+    background-color: white
+    color: rgb(33, 47, 60)
     border-radius: 20px
     margin-bottom: 10px
+    margin-right: 10px
 
 .container 
     display: grid
@@ -36,6 +37,7 @@ div.listItem
     margin-bottom: 5px
     grid-column: 2  
     -ms-grid-column: 2
+    color: rgb(33, 47, 60)
 
 div.icons 
     display: flex
