--- a/src/app/components/login/login.component.sass
+++ b/src/app/components/login/login.component.sass
@@ -4,8 +4,8 @@
   width: 70px
   background-color: rgb(33, 47, 60)
   font-weight: bold
+  font-size: 100pt
   border: none
-  font-size: 30px
   color: white
   text-align: center
   text-decoration: none
@@ -14,7 +14,7 @@
   margin: 4px 2px
   cursor: pointer
   border-radius: 100%
-  margin-left: 185px
+  margin-left: 195px
 
 .imgcontainer 
   text-align: center
@@ -104,8 +104,8 @@
   width: 100%
   padding: 10px 12px 
   margin-bottom: 10px 
-  background-color: #538a9a  
-  color: #fff 
+  color: rgb(33, 47, 60)
+  background-color: white
   border: 0px  
   margin: 5px 
   outline: none 
@@ -114,10 +114,12 @@
   border-radius: 30px 
  
 .signin input[type="submit"]:hover  
-  background-color: #5e98a8 
+  background-color: rgb(33, 47, 60)
+  color: white
  
 .signin input[type="submit"]:active  
-  background-color: #4a7b89 
+  color: rgb(33, 47, 60)
+  background-color: white
  
 input[type="checkbox"]  
   display: none 
