--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,9 +2,12 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div style="overflow: auto">
-    <div class="searchBar" *ngIf="routeIsActive('/list')">
-        <input type="search" placeholder="Cerca" [(ngModel)]="searchText">
-        <span><i (click)="search()" class="material-icons">search</i></span>
+    <div class="searchBar">
+        <ng-container *ngIf="routeIsActive('/list')">
+            <input type="search" placeholder="Cerca" [(ngModel)]="searchText">
+            <i (click)="search()" class="material-icons">search</i>
+        </ng-container>
+        <img src="assets/images/logo.png">
     </div>
     <ul>
         <ng-container *ngFor="let item of listItm">
