--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="label">Benvenuto</h1>
-    <label class="label"><h3>{{user.name}}</h3></label>
+    <label class="label"><h3><b>{{user.name}}</b></h3></label>
     <div class="imgcontainer">
         <img src="https://www.nanopress.it/wp-content/uploads/2018/02/Immagini-profilo-Facebook.jpg" alt="Avatar" class="avatar">
     </div>
