--- a/src/app/components/profile/profile.component.sass
+++ b/src/app/components/profile/profile.component.sass
@@ -8,6 +8,9 @@
   -moz-border-radius: 5px 
   border-radius: 5px 
 
+h1
+  font-weight: 100
+
 .imgcontainer 
   text-align: center
   margin: 24px 0 12px 0
@@ -27,13 +30,13 @@
   border-left: 1px solid #fff
   text-align: left
   width: 300px
-  padding: 20px
+  padding: 5px
 
 .columnright
   border-right: 1px solid #fff
   text-align: right
   width: 300px
-  padding: 20px
+  padding: 5px
 
 h5
   color: #fff
