--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -11,12 +11,29 @@ a
 
 .searchBar
     float: right
-    padding-top: 5px
-
-span
-
-    margin-top: 10px
-    font-size: 5px
+    padding-right: 10px
+    padding-top: 15px
 
 .active
     border-bottom: 1px solid white
+
+i
+    cursor: pointer
+    font-size: 22px
+
+input[type="search"]
+    margin-top: 20px
+    display: inline-block
+    border-radius: 10px
+    padding-left: 5px
+    height: 30px
+
+img
+    height: 70px
+    width: auto
+
+img
+    float: right
+    padding: 0
+    margin-left: 10px
+    margin-right: 10px
