--- a/src/app/components/register/register.component.sass
+++ b/src/app/components/register/register.component.sass
@@ -3,9 +3,9 @@
   height: 70px 
   width: 70px
   background-color: rgb(33, 47, 60)
+  color: white
   font-weight: bold
   border: none
-  color: white
   text-align: center
   text-decoration: none
   display: inline-block
@@ -96,11 +96,13 @@
 .signin input[type="password"]:focus + label:before  
   opacity: 1 
  
-.signin input[type="submit"]:hover  
-  background-color: #5e98a8 
+#registration-button:hover  
+  background-color: rgb(33, 47, 60)
+  color: white
  
-.signin input[type="submit"]:active  
-  background-color: #4a7b89 
+#registration-button:active  
+  color: rgb(33, 47, 60)
+  background-color: white
  
 .cf:before,
 .cf:after  
@@ -120,10 +122,11 @@
   width: 100%
   padding: 10px 12px 
   margin-bottom: 10px 
-  background-color: #538a9a  
-  color: #fff 
+  color: rgb(33, 47, 60)
+  background-color: white
   border: 0px  
-  margin: 5px 
+  margin: 5px
+  margin-top: 15px
   outline: none 
   -webkit-border-radius: 5px 
   -moz-border-radius: 5px 
