--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -23,7 +23,11 @@
     </div>
     <div class="right-column">
         <div class="placeholder"> </div>
-
+        <div class="fling-minislide">
+            <img src="assets/images/Home1.jpg" alt="Failed to load 1" />
+            <img src="assets/images/Home2.jpg" alt="Failed to load 2" />
+            <img src="assets/images/Home3.jpg" alt="Failed to load 3" />
+        </div>
     </div>
 </div>
 
